クマを追加

--- a/ex06/maze.ipynb
+++ b/ex06/maze.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.1.2 (SDL 2.0.16, Python 3.10.5)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pygame as pg\n",
     "import sys\n",
@@ -21,43 +12,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "class Screen:\n",
-    "    def __init__(self, title, wh):\n",
-    "        pg.display.set_caption(title)\n",
-    "        self.screen_sfc = pg.display.set_mode(wh)  # Surface\n",
-    "        self.screen_rct = self.screen_sfc.get_rect()  # Rect\n",
-    "\n",
-    "        self.width = self.screen_rct.width\n",
-    "        self.height = self.screen_rct.height\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 迷路を作る\n",
-    "## Screen 関数\n",
-    "- window を作成する\n",
-    "## maze 関数\n",
-    "- 迷路を作成する\n",
-    "  - タイルを配置する\n",
-    "  - サンプルでは真四角の画像を用いている\n",
-    "    - pygameに四角を描画するものはあるのか\n",
-    "      - draw_rect\n",
-    "      - 左上と右下の座標を使う\n",
-    "        - タイルの幅を規定する。\n",
-    "          - tile_length\n",
-    "    - rowとcolumnで二重for文を使ってmazeの二次元リストを作成している\n",
-    "      - 画像とサイズの情報を用いて描画\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,22 +133,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Bird:\n",
-    "    def __init__(self, image, size, xy, scr):\n",
+    "    def __init__(self, image, size, scr):\n",
     "        self.sfc = pg.image.load(image)\n",
     "        self.sfc = pg.transform.rotozoom(self.sfc, 0, size)\n",
     "        self.rct = self.sfc.get_rect()\n",
-    "        self.rct.center = xy\n",
     "        self.size = size\n",
     "\n",
     "        self.scr = scr\n",
+    "        self.tile_size = self.scr.tile_length\n",
     "\n",
     "        self.xy = 1+1j\n",
-    "        self.tile_size = self.scr.tile_length\n",
+    "        self.rct.center = (int(self.xy.real)*self.tile_size+(self.rct.size[0]//2),int(self.xy.imag)*self.tile_size+(self.rct.size[1]//2))\n",
     "\n",
     "    \"\"\" def check_bound(self,rct, scr_rct):\n",
     "        yoko, tate = +1, +1  # 領域内\n",
@@ -243,40 +199,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], [1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1], [1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1], [1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1], [1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1], [1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1], [1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 1], [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1], [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(make_maze(16,9))"
+    "from random import randint\n",
+    "\n",
+    "\n",
+    "class Bear(Bird):\n",
+    "    def __init__(self, image, size, scr):\n",
+    "        super().__init__(image, size, scr)\n",
+    "        self.xy = complex(self.scr.x-2,self.scr.y-2)\n",
+    "        self.rct.center = (int(self.xy.real)*self.tile_size+(self.rct.size[0]//2),int(self.xy.imag)*self.tile_size+(self.rct.size[1]//2))\n",
+    "    def update(self, scr):\n",
+    "        tmp = self.xy\n",
+    "        # クマの行動\n",
+    "        if rd.randint(0,1) == True:\n",
+    "            self.xy += complex(rd.randint(-1,1),0)\n",
+    "        else:\n",
+    "            self.xy += complex(0,rd.randint(-1,1))\n",
+    "        # 以下は同様\n",
+    "        if scr.maze_map[int(self.xy.imag)][int(self.xy.real)] != 1:\n",
+    "            self.rct.center = (int(self.xy.real)*self.tile_size+(self.rct.size[0]//2),int(self.xy.imag)*self.tile_size+(self.rct.size[1]//2))\n",
+    "        else:\n",
+    "            self.xy = tmp\n",
+    "        # 練習7\n",
+    "        \"\"\" if self.check_bound(self.rct, scr.rct) != (1, 1):  # 領域外だったら\n",
+    "            if key_states[pg.K_UP]:\n",
+    "                self.rct.centery += 1\n",
+    "            if key_states[pg.K_DOWN]:\n",
+    "                self.rct.centery -= 1\n",
+    "            if key_states[pg.K_LEFT]:\n",
+    "                self.rct.centerx += 1\n",
+    "            if key_states[pg.K_RIGHT]:\n",
+    "                self.rct.centerx -= 1 \"\"\"\n",
+    "        scr.sfc.blit(self.sfc,self.rct)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "def main():\n",
     "    running = True\n",
     "    scr = Screen()\n",
-    "    kkt = Bird(\"fig/6.png\", 2.0, (900, 400),scr)\n",
+    "    kkt = Bird(\"fig/6.png\", 2.0,scr)\n",
+    "    brs = [Bear(\"animal_kowai_kuma.png\",0.125,scr) for i in range(3)]\n",
     "    clock = pg.time.Clock()\n",
+    "\n",
+    "    counter = 0\n",
     "\n",
     "\n",
     "    while running:\n",
     "        # ここにコードを書く\n",
+    "        if counter > 100:\n",
+    "            brs.append(Bear(\"animal_kowai_kuma.png\",0.125,scr))\n",
+    "            counter = 0\n",
     "\n",
     "        scr.draw_map()\n",
     "        kkt.update(scr)\n",
-    "        \n",
+    "        \"\"\" brs[0].update(scr) \"\"\"\n",
+    "        for b in brs:\n",
+    "            b.update(scr)\n",
+    "\n",
+    "        for b in brs:\n",
+    "            if kkt.rct.colliderect(b.rct):\n",
+    "                pg.quit()\n",
+    "                sys.exit()\n",
+    "\n",
+    "\n",
     "        # イベント処理部\n",
     "        for event in pg.event.get():\n",
     "            if event.type == pg.QUIT:  # 終了イベント\n",
@@ -285,12 +278,13 @@
     "                sys.exit() #システム終了            \n",
     "\n",
     "        pg.display.update() #描画処理を実行\n",
-    "        clock.tick(20)"
+    "        counter += 1\n",
+    "        clock.tick(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +306,8 @@
     }
    ],
    "source": [
-    "main()"
+    "if __name__ == '__main__':\n",
+    "    main()"
    ]
   }
  ],
