--- a/ex06/maze.ipynb
+++ b/ex06/maze.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pygame'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_53060/585058610.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mpygame\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpg\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mrandom\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mrd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pygame'"
+     ]
+    }
+   ],
    "source": [
     "import pygame as pg\n",
     "import sys\n",
@@ -13,9 +25,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m'Python 3.7.3' を使用した実行中のセルには ipykernel パッケージが必要です。\n",
+      "次のコマンドを実行して、'ipykernel' を Python 環境にインストールします。\r\n",
+      "コマンド: 'conda install -p c:\\Users\\admin\\anaconda3\\envs\\py39\\envs\\ProjExD ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "class Screen:\n",
     "\n",
@@ -95,9 +118,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m'Python 3.7.3' を使用した実行中のセルには ipykernel パッケージが必要です。\n",
+      "次のコマンドを実行して、'ipykernel' を Python 環境にインストールします。\r\n",
+      "コマンド: 'conda install -p c:\\Users\\admin\\anaconda3\\envs\\py39\\envs\\ProjExD ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "def make_maze(yoko, tate):\n",
     "    XP = [ 0, 1, 0, -1]\n",
@@ -133,9 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m'Python 3.7.3' を使用した実行中のセルには ipykernel パッケージが必要です。\n",
+      "次のコマンドを実行して、'ipykernel' を Python 環境にインストールします。\r\n",
+      "コマンド: 'conda install -p c:\\Users\\admin\\anaconda3\\envs\\py39\\envs\\ProjExD ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "class Bird:\n",
     "    def __init__(self, image, size, scr):\n",
@@ -199,9 +244,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m'Python 3.7.3' を使用した実行中のセルには ipykernel パッケージが必要です。\n",
+      "次のコマンドを実行して、'ipykernel' を Python 環境にインストールします。\r\n",
+      "コマンド: 'conda install -p c:\\Users\\admin\\anaconda3\\envs\\py39\\envs\\ProjExD ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "from random import randint\n",
     "\n",
@@ -238,9 +294,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m'Python 3.7.3' を使用した実行中のセルには ipykernel パッケージが必要です。\n",
+      "次のコマンドを実行して、'ipykernel' を Python 環境にインストールします。\r\n",
+      "コマンド: 'conda install -p c:\\Users\\admin\\anaconda3\\envs\\py39\\envs\\ProjExD ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "def main():\n",
     "    running = True\n",
@@ -284,24 +351,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SystemExit",
+     "ename": "",
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/koya/.virtualenvs/main/lib/python3.10/site-packages/IPython/core/interactiveshell.py:3406: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "\u001b[1;31m'Python 3.7.3' を使用した実行中のセルには ipykernel パッケージが必要です。\n",
+      "次のコマンドを実行して、'ipykernel' を Python 環境にインストールします。\r\n",
+      "コマンド: 'conda install -p c:\\Users\\admin\\anaconda3\\envs\\py39\\envs\\ProjExD ipykernel --update-deps --force-reinstall'"
      ]
     }
    ],
@@ -313,7 +373,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 ('main')",
+   "display_name": "Python 3.9.7 ('py39')",
    "language": "python",
    "name": "python3"
   },
@@ -327,12 +387,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "252892921b1ee3028896dc1b57062ca6ddd343e4a996512bc7fbc95666012b4f"
+    "hash": "f17d57e5fc6ee481ff7e68a143ed0edc07dba6babbe5d2cf56f5efad89bcf61d"
    }
   }
  },
